Table configuraciones{
id int [pk,increment]
nombre varchar
descripcion varchar
direccion varchar
telfono varchar
divisa varchar
correo_electronico varchar
web varchar
logo varchar
}

Table gestiones{
id int [pk,increment]
nombre varchar
}

Table niveles{
id int [pk,increment]
nombre varchar
}

Table turnos{
id int [pk,increment]
nombre varchar
}

Table periodos{
id int [pk,increment]
nombre varchar
getion_id int [ref: > gestiones.id]
}

Table grados{
id int [pk,increment]
nombre varchar
nivel_id int [ref: > niveles.id] 
}

Table paralelos{
id int [pk,increment]
nombre varchar
grado_id int [ref: > grados.id]
}

Table materias{
id int [pk,increment]
nombre varchar

}

Table personals {
  id int [pk, increment] // Primary key
  usuario_id int [ref: > users.id]
  tipo varchar
  nombres varchar
  apellidos varchar
  ci varchar
  fecha_nacimiento date
  direccion varchar
  telefono varchar
  profesion varchar
  foto varchar
}

Table users {
  id int [pk, increment] // Primary key
  name varchar
  email varchar
  password varchar
}
Table formaciones {
  id int [pk, increment] // Primary key
  personal_id int [ref: > personals.id]
  titulo varchar
  institucion varchar
  nivel varchar
  ano_graduacion date
  archivo varchar
}

// Tabla de Padres de Familia (ppffs)
Table ppffs {
  id int [pk, increment] // Primary key
  nombres varchar
  apellidos varchar
  ci varchar
  fecha_nacimiento date
  telefono varchar
  parentesco varchar
  ocupacion varchar
  direccion varchar
}

// Tabla de Estudiantes
Table estudiantes {
  id int [pk, increment] // Primary key
  usuario_id int [ref: > users.id]
  ppff_id int [ref: > ppffs.id]
  nombres varchar
  apellidos varchar
  ci varchar
  fecha_nacimiento date
  direccion varchar
  telefono varchar
  foto varchar
  estado varchar
}

Table matriculaciones{
  id int [pk, increment]
  estudiante_id int [ref: > estudiantes.id]
  turno_id int [ref: > turnos.id]
  gestion_id int [ref: > gestiones.id]
  nivel_id int [ref: > niveles.id]
  grado_id int [ref: > grados.id]
  paralelo_id int [ref: > paralelos.id]
}

Table asignaciones {
    id int [pk, increment] // Primary key
    personal_id int [ref: > personals.id]
    gestion_id int [ref: > gestiones.id]
    nivel_id int [ref: > niveles.id]
    grado_id int [ref: > grados.id]
    paralelo_id int [ref: > paralelos.id]
    materia_id int [ref: > materias.id]
    turno_id int [ref: > turnos.id]
    estado varchar
    fecha_asignacion date
}